...
            return "Catalog"
        case .inventory:
            return "Inventory"
        case .shopping:
            return "Shopping"
        case .projects:
            return "Projects"
        case .purchases:
            return "Purchases"
        case .projectPlans:
            return "Projects"
        case .logbook:
            return "Logbook"
...
